difference entre v-if et v-show

--- a/index3.html
+++ b/index3.html
@@ -15,6 +15,9 @@
         <strong> ceci est un template </strong>
         </template>
         <p v-else> some kind of magic </p>
+
+        <p v-if="show"> test du v-if</p>
+        <p v-show="show"> test du v-show</p>
     </div>
 
     <script>
